Minor error alertbox, raidus corrected in name recycler view, ogpa subjects corrected, adjust view added in manifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".Sign_Up"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".Login"
