--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.GradeACE"
         tools:targetApi="31">
         <activity
+            android:name=".Btech_Agriculture_Bsc_Horticulture_OGPA_Calculator"
+            android:exported="false" />
+        <activity
             android:name=".Btech_Agriculture_Engineering_tab"
             android:exported="false" />
         <activity
