--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
-    <uses-permission android:name="android.permission.INTERNET"/>
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,23 +13,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GradeACE"
-        tools:targetApi="31" >
-
+        tools:targetApi="31">
+        <activity
+            android:name=".EmailVerificationPage"
+            android:exported="false" />
         <activity
             android:name=".SecondLoadingPage"
-            android:exported="true" >
+            android:exported="true"
+            android:windowSoftInputMode="adjustPan">
+
         </activity>
         <activity
             android:name=".FirstLoadingPage"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
+            <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
         <activity
             android:name=".web_policy_view"
             android:exported="false" />
@@ -36,8 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".Main_loading"
-            android:exported="true">
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".Btech_Agriculture_Bsc_Horticulture_OGPA_Calculator"
             android:exported="false"
